/*
 * Copyright 2016-2017 Matrix Labs
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, version 3 of the License.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package matrix_malos;

// configuration of drivers. Both global configuration and
// for specific drivers.
message DriverConfig {
  // Delay between updates. In seconds.
  float delay_between_updates = 1;
  // Timeout after last ping.
  float timeout_after_last_ping = 2;

  // Values for LEDs. When configuring the driver you should leave
  // delay_between_updates and timeout_after_last_ping unchanged.
  EverloopImage image = 3;

  // Malos-Eye configuration.
  MalosEyeConfig malos_eye_config = 4;

  // ZigBee Message.
  ZigBeeMsg zigbee_message = 5;

  // LIRC service configuration for IR commands.
  LircParams lirc = 6;

  // ServoMotor service configuration 
  ServoParams servo = 7;

  // Gpio service configuration
  GpioParams gpio = 8;

  // Humidity configuration
  HumidityParams humidity = 9;

  // Microphone Array configuration
  MicArrayParams  micarray = 10;  

}


enum EnumMalosEyeDetectionType {
  // Stop. Don't do detections.
  // This only makes sense when this is the only command sent to MalosEye.
  STOP = 0;

  // Detect frontal faces.
  FACE = 20;

  // Detect faces and enhance the detection with demographics.
  // This might involve a connection to a remote detection server.
  FACE_DEMOGRAPHICS = 21;

  // Get face descriptors for detected faces.
  // The descriptors are used for face recognition,
  // that is, tell people apart.
  FACE_DESCRIPTOR = 30;

  // Detect thum-up gesture.
  HAND_THUMB_UP = 40;
  // Detect palm gesture.
  HAND_PALM = 41;
  // Detect pinch gesture.
  HAND_PINCH = 42;
  // Detect fist gesture.
  HAND_FIST = 43;
}

// Configuration for MALOS-eye. If object_to_detect has at least
// one element the rest of the configuration will be ignored and the
// objects to be detected will change acordingly.
message MalosEyeConfig {
  // Camera configuration. Camera id, width, height, and so on.
  CameraConfig camera_config = 1;
  // Configuration of the object detector.l
  ObjectDetectorConfig detector_config = 2;
  // Tracker configuration.
  TrackerConfig tracker_config = 3;
  // Configuration of the detection server.
  DetectionServerConfig detection_server_config = 4;
  // Detections to perform. When this field is set the other fields
  // are ignored.
  repeated EnumMalosEyeDetectionType object_to_detect = 21;
}

message CameraConfig {
  // What camera to open? 0 is usually the first camera.
  int32 camera_id = 1;
  // Capture width, i.e. 640.
  int32 width = 2;
  // Capture height, i.e. 480.
  int32 height = 3;
}

message ObjectDetectorConfig {
  // Cascade path that the program can open
  string cascade_path = 1;
}

// These settings could depend on time and not on frames, as frame-rate
// depends on the resolution.
message TrackerConfig {
  // In how many frames does the object need to be before being taken
  // into account?
  int32 frames_to_count = 1;
  // Once we stop seeing the object, how many frames should we wait before
  // we discard the object?
  int32 frames_to_discard = 2;
}

message DetectionServerConfig {
  // Detection server connection string. For instance, "127.0.0.1:32061".
  string detection_server_address = 1;
  // Timeout for detection server (in milliseconds).
  int32 detection_server_timeout = 2;
}

// Message used by MALOS to report its internal state and the configuration of
// its drivers.
message DriverInfo {
  // Driver name.
  string driver_name = 1;
  // Base port: Port where the device is located.
  // base_port => config channel (0MQ pull, you should push)
  // base_port + 1 => keepalive channel (0MQ pull, you should push)
  // base_port + 2 => error channel (0MQ push, you should pull)
  // base_port + 3 => send update channel (0MQ push, you should pull)
  int32 base_port = 2;

  // Does the device provide updates? Some devices such as the everloop
  // LED array don't provide updates.
  bool provides_updates = 3;
  // What is the device delay between updates? In milliseconds.
  // This field only makes sense if provides_updates is set.
  int32 delay_between_updates = 4;

  // Does the device need pings (keepalive messages) to keep returning messages?
  bool needs_pings = 5;
  // This field only makes sense if needs_pings is set.
  // If the device hasn't received keepalive messages in a time interenal
  // bigger than this amount, the device will stop sending updates.
  int32 timeout_after_last_ping = 6;

  // Notes set by the driver. Meant to be read by humans.
  string notes_for_human = 7;
}

// Information about all the available drivers.
message MalosDriverInfo {
  // The available drivers.
  repeated DriverInfo info = 1;
}

// Dummy lecture.
message Dummy {
  // Random value.
  float value = 1;
}

// Basic Humidity lecture.
message Humidity {
  // Humidity.
  float humidity = 1;

  // Temperature.
  float temperature = 2;

  // Raw temperature value from the sensor.
  float temperature_raw = 3;

  //  Flag that tells if the temperature is calibrated
  bool temperature_is_calibrated = 4 ;
}

message HumidityParams{
  // Current temperature used for calibration.
  float current_temperature = 1; 
}

// Basic UV radiation lecture.
message UV{
  // UV index.
  float uv_index = 1;

  // Risk of harm from unprotected sun exposure, for the average adult.
  // Accordin to the OMS table. https://www.epa.gov/sunsafety/uv-index-scale-0
  string oms_risk = 2;
}


// Basic Pressure lecture.
message Pressure {
  // Pressure.
  float pressure = 1;

  // Altimeter.
  float altitude = 2;

  // Temperature.
  float temperature = 3;
}


// Basic Pressure lecture.
message Imu {
  //Vertical axis (yaw)
  float yaw = 1;

  //Lateral axis (pitch)
  float pitch = 2;

  //Longitudinal axis (roll)
  float roll = 3;

  // acceleration
  float accel_x = 4;
  float accel_y = 5;
  float accel_z = 6;

  // gyroscope
  float gyro_x = 7;
  float gyro_y = 8;
  float gyro_z = 9;

  // magnetometer
  float mag_x = 10;
  float mag_y = 11;
  float mag_z = 12;
}

// Value for a led. Values range from 0 to 255.
message LedValue {
  uint32 red = 1;
  uint32 green = 2;
  uint32 blue = 3;
  uint32 white = 4;
}

// The led array.
message EverloopImage {
  repeated LedValue led = 1;
}

// ZigBee message
message ZigBeeMsg {

  // Zigbee command types definition
  enum ZigBeeCmdType {
    ZCL = 0;
    NETWORK_MGMT = 1;
  }

  // ZigBee Cluster Library command definition
  message ZCLCmd {

    // ZCL commands type
    enum ZCLCmdType  {
      ON_OFF = 0;
      LEVEL = 1;
      COLOR_CONTROL = 2;
      IDENTIFY = 3;
    }

    // OnOff command definition
    message OnOffCmd {

      enum ZCLOnOffCmdType  {
        ON = 0;
        OFF = 1;
        TOGGLE = 2;
      }

      // ZCL OnOff command type
      ZCLOnOffCmdType type = 1;

      // Params not required for ZCL OnOff cluster commands
    }

    // Level command definition
    message LevelCmd {

      // ZCL Level commands types
      enum ZCLLevelCmdType  {
        MOVE_TO_LEVEL = 0;
        MOVE = 1;
        // STEP = 2;
        // STOP = 3;
        // MOVE_TO_LEVEL_ONOFF = 4;
        // MOVE_ONOFF = 5;
        // STEP_ONOFF = 6;
        // STOP_ONOFF = 7;
      }

       // MoveToLevel command parameters
      message MoveToLevelCmdParams{
        // level param <uint8>: The meaning of ‘level’ is device dependent – e.g. for a light it may mean brightness level.
        uint32  level  = 1;
        // Transition time <uint16>
        uint32 transition_time  = 2;
      }

      // Move command parameters
      message MoveCmdParams{
        // |Fade Mode Value | Description  |
        // |      0x00      |     Up       |
        // |      0x01      |    Down      |
        uint32  mode  = 1;
        //Rate <uint8>: specifies the rate of movement in units per second.
        uint32 rate  = 2;
      }

      ZCLLevelCmdType type = 1;

      // MoveToLevel command
      MoveToLevelCmdParams move_to_level_params = 2;

      // Move command
      MoveCmdParams move_params = 3;
    }

    // Color Control command definition
    message ColorControlCmd {

      // ZCL ColorControl command types
      enum ZCLColorControlCmdType  {
        MOVETOHUE = 0;
        MOVETOSAT = 1;
        MOVETOHUEANDSAT = 2;
      }

      // MoveToHue command
      message MoveToHueCmdParams{

        // Values of the Direction Param
        enum DirectionParam{
          SHORTEST_DISTANCE = 0;
          LONGEST_DISTANCE = 1;
          UP = 2;
          DOWN = 3;
        }

        // Hue <uint8>: specifies the hue to be moved to.
        uint32 hue = 1;

        // Direciton param
        DirectionParam direction  = 2;

        //Transition time <uint16> : specifies, in 1/10ths of a second, the time that shall be taken to move to the new hue
        uint32 transition_time = 3;
      }

      message MoveToSatCmdParams {

        // Saturation <uint8>
        uint32 saturation = 1;

        // Transition Time <uint16>
        uint32 transition_time = 2;
      }

      message MoveToHueAndSatCmdParams {

        // Hue <uint8>
        uint32 hue = 1;

        // Saturation <uint8>
        uint32 saturation = 2;

        // Transition Time <uint16>
        uint32 transition_time = 3;
      }

      // ZCLColorControl command type
      ZCLColorControlCmdType type = 1;

      // MoveToHue command params
      MoveToHueCmdParams movetohue_params = 2;

      // MoveToSat commands params
      MoveToSatCmdParams movetosat_params = 3;

      // MoveToHueAndSat commands params
      MoveToHueAndSatCmdParams movetohueandsat_params = 4;
    }

    //ZCL Identify command type
    message IdentifyCmd{

      enum ZCLIdentifyCmdType  {
        // Starts the identification process
        IDENTIFY_ON = 0; 
        // Stops the identification process
        IDENTIFY_OFF = 1;  
      }

      message IdentifyOnCmdParams {
        // Transition Time <uint8>
        uint32 endpoint = 1;
        // Transition Time in seconds <uint16>
        uint32 identify_time = 2;
      }

      message IdentifyOffCmdParams {
        // Transition Time in seconds <uint16>
        uint32 identify_time = 1;
      }

      ZCLIdentifyCmdType type = 1;

      IdentifyOnCmdParams identify_on_params = 2;

      IdentifyOffCmdParams identify_off_params = 3;
    }

    // ZCL command type
    ZCLCmdType type = 1;

    // OnOff command
    OnOffCmd onoff_cmd = 2;

    // Level command
    LevelCmd level_cmd = 3;

    // Color control command
    ColorControlCmd colorcontrol_cmd = 4;

    // Identify command
    IdentifyCmd identify_cmd = 5;

    // Node Id 
    uint32 node_id = 6;

    // Endpoint Id
    uint32 endpoint_index = 7;

  }

  // Network management command definition
  message NetworkMgmtCmd{

    // NetworkMgmt command types
    enum NetworkMgmtCmdTypes {
      CREATE_NWK = 0;  // Creates a new network. No params required
      LEAVE_NWK = 1;  // Leave the current network. No params required
      NODE_LEAVE_NWK = 2;  // Ask a specific node to leave the current network.
      PERMIT_JOIN = 3; // Permit other devices to join the network for a time period.
      DISCOVERY_INFO = 4; // Gets all the info from the devices already connected to the network. No params required
      RESET_PROXY = 5; // Reset the proxy app . No params required
      IS_PROXY_ACTIVE = 6; // TRUE if the conection between the proxy and the ZigBee chip is active. No params required
      NETWORK_STATUS = 7; // Network status
      // The Proxy is the app that talks with the ZigBee chip via
      // COMs and with the MALOS services using Sockets.
    }

    // PermitJoin Params Definition
    message PermitJoinParams{
      // Joining time : Number of seconds during which devices will be allowed to join the network
      uint32 time = 1;
    }

    // Node Leave Network Params Definition
    message NodeLeaveNetParams{
      // Node Id of the Node you want to leave the network
      uint32 node_id = 1;
    }

    // CLuster Description Definition
    message ClusterDescription{
      enum ClusterInOutType{
        SERVER_IN = 0;
        CLIENT_OUT = 1;
      }
      // Cluster server/client type: server (IN) or client (OUT) implementation
      ClusterInOutType type = 1;
      // Cluster ID : ex 0x0006 (On/off),  0x0008 (Level Control), 0x0201 (Thermostat)
      uint32 cluster_id = 2;
    }

    // EndPoint Description Definition
    message EndPointDescription{
      // EndPoint Profile Index
      uint32 endpoint_index = 1;
      // EndPoint Profile ID
      uint32 profile_id = 2;
      // EndPoint Device ID 
      uint32 device_id = 3;
      // EndPoint Clusters
      repeated ClusterDescription clusters = 4;
    }

    // Node Info Definition
    message NodeDescription{
      // NodeId of the Node
      uint32 node_id = 1;
      // EUI64 of the Node
      uint64 eui64 = 2;
      // EndPoints in the Node
      repeated EndPointDescription  endpoints = 3;
    }

    // Network Status Definition
    message NetworkStatus{

      enum Status
      {
        /** The node is not associated with a network in any way. */
        NO_NETWORK = 0;
        /** The node is currently attempting to join a network. */
        JOINING_NETWORK = 1;
        /* The node is joined to a network. */
        JOINED_NETWORK = 2;
        /** The node is an end device joined to a network but its parent
            is not responding. */
        JOINED_NETWORK_NO_PARENT = 3;
        /** The node is in the process of leaving its current network. */
        LEAVING_NETWORK = 4;
      }

      // Status
      Status type = 1;
    }

    // NetworkMgmt command type
    NetworkMgmtCmdTypes type = 1;

    // PermitJoin params
    PermitJoinParams permit_join_params = 2;

    // Is Proxy Active params
    bool is_proxy_active = 3;

    // Node Leave Network params
    NodeLeaveNetParams node_leave_params = 4;

    // Node Info
    NodeDescription node_info = 5;

    // Discovery Nodes info
    repeated NodeDescription connected_nodes = 6;

    // Network status
    NetworkStatus network_status = 7;
  }

  // Zigbee command type
  ZigBeeCmdType type = 1;

  // ZigBee Cluster Library command
  ZCLCmd zcl_cmd = 2;

  // Network management commnad
  NetworkMgmtCmd network_mgmt_cmd = 3;

 }

// LIRC service params
message LircParams {
  // IR remote device name
  string device = 1;

  // IR command
  string command = 2;

  //For transport of LIRC remote devices configuration.
  //Format: http://www.lirc.org/html/configuration-guide.html
  //Admobilize config remotes resources:
  //http://assets.admobilize.com/lirc-remotes/
  string config = 3;
}

// Servo handler params
message ServoParams {
  // GPIO to config
  uint32 pin = 1;

  // Servo angle
  uint32 angle = 2; 
}

// GPIO handler params
message GpioParams {
  // GPIO to config
  uint32 pin = 1;

  // GPIO mode input/output
  enum EnumMode {
    INPUT = 0;
    OUTPUT = 1;
  }
  EnumMode mode = 2;

  // GPIO value
  uint32 value = 3;

  // GPIO vector value
  uint32 values = 4;
}

// Microphone Array params
message MicArrayParams {
  // gain for all microphones
  int32 gain = 1;

  // Spherical coordinates for beamforming (azimutal_angle,
  // polar_angle, radial_distance_mm).
  //
  // azimutal angle (must lie between -pi/2 an pi/2)
  float azimutal_angle  = 2;
  
  // polar angle (must lie between -pi/2 an pi/2)
  float polar_angle = 3;

  // distance from the center of the MATRIX Creator to the sound source.
  float radial_distance_mm = 4;

  // sound speed in mm/seg  
  float sound_speed_mmseg = 5;
}
